--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,12 @@ spring:
     username: root
     password: root
     driver-class: com.mysql.cj.jdbc.Driver
+  jpa:
+    show-sql: true
+
+  cache:
+    type: redis
+    host: localhost
+    port: 6379
+    redis:
+      time-to-live: 600000
